// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

package com.example.replicated.registermap;

message Key {
  string field = 1;
}

message Value {
  string field = 1;
}

message SetValue {
  string register_map_id = 1 [(akkaserverless.field).entity_key = true];
  Key key = 2;
  Value value = 3;
}

message RemoveValue {
  string register_map_id = 1 [(akkaserverless.field).entity_key = true];
  Key key = 2;
}

message GetValue {
  string register_map_id = 1 [(akkaserverless.field).entity_key = true];
  Key key = 2;
}

message CurrentValue {
  Key key = 1;
  Value value = 2;
}

message GetAllValues {
  string register_map_id = 1 [(akkaserverless.field).entity_key = true];
}

message CurrentValues {
  repeated CurrentValue values = 1;
}

// tag::replicated_entity[]
service RegisterMapService {
  option (akkaserverless.codegen) = {
    replicated_entity: {
      name: "com.example.replicated.registermap.domain.SomeRegisterMap" // <1>
      entity_type: "some-register-map"
      replicated_register_map: { // <2>
        key: "com.example.replicated.registermap.domain.SomeKey" // <3>
        value: "com.example.replicated.registermap.domain.SomeValue" // <4>
      }
    }
  };

  rpc Set(SetValue) returns (google.protobuf.Empty);
  rpc Remove(RemoveValue) returns (google.protobuf.Empty);
  rpc Get(GetValue) returns (CurrentValue);
  rpc GetAll(GetAllValues) returns (CurrentValues);
}
// end::replicated_entity[]
