// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.valueentity.domain;

option java_multiple_files = true;
// no java_outer_classname option, will default to "SomeValueEntityDomain"

message SomeValueEntityState {
  string some_field = 1;
}
